tests/type-errors/invalid_instruction_view_container_instr.arl
archetype invalid_instruction_view_container_instr

variable res : nat = 0

variable m : map<nat, string> = []

asset my_asset {
  a : nat;
  b : string;
}

view f() : unit {
  var v : map<nat, string> = [];
  v.put(0, "");

  m.put(0, "");
  return Unit
}

entry exec () {
  var v : map<nat, string> = [];
  v.put(0, "");

  m.put(0, "");
}
